# waypoint

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
examples/: slow_loop.py
site/: index.html
src/waypoint/: __init__.py  __main__.py  ast_transform.py  cli.py  core.py  exceptions.py  loop_context.py  sequence.py  storage.py
tests/: test_ast_transform.py  test_checkpoint_config.py  test_cli.py  test_core.py  test_loop_context.py  test_main.py  test_properties.py  test_resumable.py  test_sequence.py  test_storage.py
